<resources>
    <string name="app_name">Instagram</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_take_picture">Take Picture</string>
    <string name="action_submit">Submit</string>
    <string name="title_description">Description...</string>
    <string name="log_out">Log out</string>
    <string name="feed">Feed</string>
    <string name="textview">TextView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_username">Username</string>
    <string name="log_in">Log In</string>
    <string name="forgot_your_login_details">Forgot your login details?</string>
    <string name="get_help_signing_in">Get help signing in.</string>
    <string name="or">OR</string>
    <string name="post_profile_image">Post Profile Image</string>
    <string name="submit_profile_image">Submit Profile Image</string>
    <string name="logout">Logout</string>


</resources>